--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "multer": "^2.0.2",
     "next": "15.4.6",
     "next-auth": "^4.24.11",
+    "node-fetch": "^3.3.2",
     "pdfjs-dist": "^5.4.54",
     "prisma": "^6.13.0",
     "react": "19.1.0",
