--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^17.2.2",
     "file-type": "^21.0.0",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.539.0",
