--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tabs": "^1.1.12",
+    "@relume_io/relume-tailwind": "^1.3.0",
+    "@relume_io/relume-ui": "^1.3.1",
     "@types/bcryptjs": "^3.0.0",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/multer": "^2.0.0",
@@ -39,6 +41,7 @@
     "clsx": "^2.1.1",
     "dotenv": "^17.2.2",
     "file-type": "^21.0.0",
+    "framer-motion": "^12.23.22",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.539.0",
     "multer": "^2.0.2",
@@ -54,6 +57,7 @@
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.62.0",
     "react-hot-toast": "^2.6.0",
+    "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
     "react-pdf": "^10.0.1",
     "react-syntax-highlighter": "^15.6.6",
