--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@relume_io/relume-ui": "^1.3.1",
     "@types/bcryptjs": "^3.0.0",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/luxon": "^3.7.1",
     "@types/multer": "^2.0.0",
     "@types/nodemailer": "^7.0.1",
     "@types/react-syntax-highlighter": "^15.5.13",
@@ -39,11 +40,13 @@
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "dotenv": "^17.2.2",
     "file-type": "^21.0.0",
     "framer-motion": "^12.23.22",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.539.0",
+    "luxon": "^3.7.2",
     "multer": "^2.0.2",
     "nanoid": "^5.1.6",
     "next": "15.4.6",
